--- a/src/components/ComboBox/combo-box.css
+++ b/src/components/ComboBox/combo-box.css
@@ -99,6 +99,7 @@
 }
 .form-control-group:not(.disabled):not(.is-invalid):focus-within {
   outline: var(--sgds-outline-focus);
+  outline-offset: var(--sgds-outline-offset-focus);
 }
 
 .form-control-group.is-invalid {
