--- a/src/components/Mainnav/mainnav-item.css
+++ b/src/components/Mainnav/mainnav-item.css
@@ -127,7 +127,7 @@
   --sgds-link-color-emphasis: var(--sgds-primary-color-default);
   color: var(--sgds-link-color-emphasis, var(--sgds-primary-color-default));
   outline: var(--sgds-outline-focus);
-  outline-offset: -4px;
+  outline-offset: var(--sgds-outline-offset-focus);
 }
 
 :host([disabled]) ::slotted(*) {
