--- a/src/components/OverflowMenu/overflow-menu.css
+++ b/src/components/OverflowMenu/overflow-menu.css
@@ -1,27 +1,28 @@
-:host([size="sm"]) .overflow-btn{
-	width: var(--sgds-dimension-24);
-	height: var(--sgds-dimension-24);
+:host([size="sm"]) .overflow-btn {
+  width: var(--sgds-dimension-24);
+  height: var(--sgds-dimension-24);
 }
 
 .overflow-btn {
-	width: var(--sgds-dimension-32);
-	height: var(--sgds-dimension-32);
-	background-color: var(--sgds-bg-transparent);
-	border-radius:  var(--sgds-border-radius-sm);
-	border: 0;
-	padding: 0;
-	position: relative;
-	cursor: pointer;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  width: var(--sgds-dimension-32);
+  height: var(--sgds-dimension-32);
+  background-color: var(--sgds-bg-transparent);
+  border-radius: var(--sgds-border-radius-sm);
+  border: 0;
+  padding: 0;
+  position: relative;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .overflow-btn:hover {
-	background-color: var(--sgds-bg-translucent-subtle);
+  background-color: var(--sgds-bg-translucent-subtle);
 }
 
 .overflow-btn:focus-visible {
-	outline: var(--sgds-outline-focus);
-	background-color: var(--sgds-bg-translucent-subtle);
+  outline: var(--sgds-outline-focus);
+  outline-offset: var(--sgds-outline-offset-focus);
+  background-color: var(--sgds-bg-translucent-subtle);
 }
