--- a/src/components/Select/select.css
+++ b/src/components/Select/select.css
@@ -20,7 +20,6 @@
   position: relative;
   width: -webkit-fill-available;
   width: -moz-available;
-
 }
 
 .dropdown-menu {
@@ -32,7 +31,7 @@
 
 .form-control-group.disabled {
   opacity: var(--sgds-opacity-50);
-  cursor: not-allowed
+  cursor: not-allowed;
 }
 
 .form-control-group {
@@ -76,26 +75,27 @@
   padding: var(--sgds-padding-sm) var(--sgds-padding-lg, 20px);
 }
 
-
 .form-control-group.readonly {
   border-color: var(--sgds-border-color-muted);
 }
 
 .form-control-group:not(.disabled):not(.is-invalid):hover {
-  border: var(--sgds-form-border-width-thick) solid var(--sgds-border-color-emphasis);
-}
-
-.form-control-group:not(.disabled):not(.is-invalid):focus,
-.form-control-group:not(.disabled):not(.is-invalid):focus-within {
-  border: var(--sgds-form-border-width-thick) solid var(--sgds-border-color-emphasis);
+  outline: var(--sgds-form-border-width-thick) solid var(--sgds-border-color-emphasis);
+  outline-offset: var(--sgds-form-outline-offset-focus);
 }
 
 .form-control-group:not(.disabled):not(.is-invalid):focus-within {
   outline: var(--sgds-form-outline-focus);
+  outline-offset: var(--sgds-form-outline-offset-focus);
 }
 
-.form-control-group.is-invalid {
-  border: var(--sgds-form-border-width-thick) solid var(--sgds-form-danger-border-color-default);
+.form-control-group.is-invalid:not(.disabled) {
+  border: var(--sgds-form-border-width-default) solid var(--sgds-form-danger-border-color-default);
+}
+
+.form-control-group:not(.disabled).is-invalid:focus-within {
+  outline: var(--sgds-border-width-2) solid var(--sgds-form-danger-color-default);
+  outline-offset: var(--sgds-form-outline-offset-focus);
 }
 
 .form-control-group.disabled {
