--- a/src/components/Sidenav/sidenav-link.css
+++ b/src/components/Sidenav/sidenav-link.css
@@ -1,4 +1,3 @@
-
 :host([class^="third-level"]) ::slotted(a) {
   padding-left: calc(var(--sgds-padding-xl) + var(--sgds-padding-3-xl));
 }
@@ -54,6 +53,7 @@
 }
 ::slotted(a:focus-visible) {
   outline: var(--sgds-outline-focus);
+  outline-offset: var(--sgds-outline-offset-focus);
 }
 
 :host([active]) ::slotted(a:focus),
