--- a/src/components/Subnav/subnav.css
+++ b/src/components/Subnav/subnav.css
@@ -40,6 +40,7 @@ slot[name="header"]::slotted(*) {
 
 .subnav-toggler:focus-visible {
   outline: var(--sgds-outline-focus);
+  outline-offset: var(--sgds-outline-offset-focus);
 }
 
 .subnav:not(.collapsed) .subnav-toggler {
@@ -117,7 +118,7 @@ slot[name="actions"]::slotted(*) {
     background-color: var(--sgds-surface-raised);
     border-bottom: var(--sgds-border-width-1) solid var(--sgds-border-color-muted);
   }
-  
+
   .subnav-actions {
     flex-direction: row;
     align-items: center;
@@ -137,7 +138,7 @@ slot[name="actions"]::slotted(*) {
     gap: var(--sgds-gap-xl);
     row-gap: var(--sgds-gap-none);
   }
-  
+
   .subnav.collapsed {
     border-bottom: var(--sgds-border-width-0);
   }
@@ -178,11 +179,11 @@ slot[name="actions"]::slotted(*) {
     border-bottom: var(--sgds-border-width-0);
     width: auto;
   }
-  
+
   .subnav-nav ::slotted(*) {
     width: inherit;
   }
-  
+
   .subnav-toggler {
     display: none;
   }
