--- a/src/components/Textarea/textarea.css
+++ b/src/components/Textarea/textarea.css
@@ -53,6 +53,7 @@ textarea {
 }
 .form-control:not([disabled]):not(.is-invalid):focus-visible {
   outline: var(--sgds-form-outline-focus);
+  outline-offset: var(--sgds-form-outline-offset-focus);
 }
 
 .form-control.is-invalid {
