--- a/src/themes/root.css
+++ b/src/themes/root.css
@@ -323,8 +323,10 @@
   --sgds-form-icon-size-md: var(--sgds-icon-size-md);
   --sgds-form-icon-size-lg: var(--sgds-icon-size-lg);
 
-  --sgds-outline-focus: 4px solid var(--sgds-blue-400);
+  --sgds-outline-focus: var(--sgds-border-width-2) solid var(--sgds-blue-400);
+  --sgds-outline-offset-focus: calc(-1 * var(--sgds-border-width-2));
   --sgds-form-outline-focus: var(--sgds-outline-focus);
+  --sgds-form-outline-offset-focus: var(--sgds-outline-offset-focus);
   
   /* Masthead and Mainnav Max Width and Padding */
   --sgds-mainnav-max-width: 1440px;
