--- a/src/components/Select/select.css
+++ b/src/components/Select/select.css
@@ -17,3 +17,6 @@
   padding: var(--sgds-padding-sm) var(--sgds-padding-lg, 20px);
   pointer-events: none;
 }
+slot::slotted(*){
+  display:none;
+}
