--- a/src/components/DescriptionList/description-list-group.css
+++ b/src/components/DescriptionList/description-list-group.css
@@ -8,7 +8,7 @@
   flex-direction: column;
 }
 
-.title {
+slot[name="title"]::slotted(*) {
   color: var(--sgds-heading-color-default);
   font-weight: var(--sgds-font-weight-semibold);
   letter-spacing: var(--sgds-letter-spacing-tight);
@@ -16,7 +16,7 @@
   line-height: var(--sgds-line-height-heading);
 }
 
-.description {
+slot[name="description"]::slotted(*) {
   font-weight: var(--sgds-font-weight-regular);
   color: var(--sgds-color-subtle);
   font-size: var(--sgds-font-size-2);
@@ -27,6 +27,9 @@
   display: flex;
   flex-direction: column;
   gap: var(--sgds-gap-xs);
+}
+
+.has-header {
   padding: var(--sgds-padding-lg) var(--sgds-padding-xl);
   border-bottom: var(--sgds-border-width-1) solid var(--sgds-border-color-muted);
 }
