chore(*): test select using lightdom options and card using updated hook to detect slot

--- a/cypress/apps/next-app/src/app/globals.css
+++ b/cypress/apps/next-app/src/app/globals.css
@@ -1,2 +1,6 @@
 @import url("@govtechsg/sgds-web-component/themes/day.css");
 @import url("@govtechsg/sgds-web-component/css/reboot.css");
+
+sgds-thumbnail-card:not(:defined) {
+    visibility: hidden;
+}
