--- a/src/base/button.css
+++ b/src/base/button.css
@@ -42,17 +42,18 @@
 
 :host([size="lg"]) .btn {
   font-size: var(--sgds-font-size-3);
-  padding: 0px var(--sgds-padding-xl);
+  line-height: var(--sgds-line-height-32);
+  padding: var(--sgds-padding-none) var(--sgds-padding-xl);
   min-width: var(--sgds-dimension-112);
   height: var(--sgds-dimension-56);
 }
 
 :host([size="sm"]) .btn {
   font-size: var(--sgds-font-size-1);
-  padding: 0px var(--sgds-padding-md);
+  line-height: var(--sgds-line-height-20);
+  padding: var(--sgds-padding-none) var(--sgds-padding-md);
   min-width: var(--sgds-dimension-80);
   height: var(--sgds-dimension-40);
-  line-height: var(--sgds-line-height-min);
 }
 
 .btn {
@@ -67,8 +68,8 @@
   gap: var(--sgds-gap-2-xs);
   font-size: var(--sgds-font-size-2);
   font-weight: var(--btn-font-weight);
-  line-height: var(--sgds-line-height-body);
-  padding: 0px var(--sgds-padding-lg);
+  line-height: var(--sgds-line-height-24);
+  padding: var(--sgds-padding-none) var(--sgds-padding-lg);
   min-width: var(--sgds-dimension-96);
   width: inherit;
   height: var(--sgds-dimension-48);
