--- a/src/base/card.css
+++ b/src/base/card.css
@@ -174,21 +174,13 @@ a.card:not(.disabled):focus-visible {
 }
 
 slot[name="subtitle"]::slotted(*) {
-  --sgds-margin-2-xs: var(--sgds-margin-none);
-  --sgds-margin-xs: var(--sgds-margin-none);
-  --sgds-font-size-4: var(--sgds-font-size-1);
-  --sgds-font-size-5: var(--sgds-font-size-1);
-  --sgds-font-size-6: var(--sgds-font-size-1);
-  --sgds-font-weight-bold: var(--sgds-font-weight-semibold);
-  --sgds-line-height-heading: var(--sgds-line-height-min);
-  --sgds-letter-spacing-tight: var(--sgds-letter-spacing-wide);
   color: var(--sgds-color-subtle);
-  font-size: var(--sgds-font-size-1);
-  font-weight: var(--sgds-font-weight-semibold);
-  letter-spacing: var(--sgds-letter-spacing-wide);
+  font-size: var(--sgds-font-size-1) !important;
+  font-weight: var(--sgds-font-weight-semibold) !important;
+  letter-spacing: var(--sgds-letter-spacing-wide) !important;
   text-transform: uppercase;
-  line-height: var(--sgds-line-height-min);
-  margin: var(--sgds-margin-none);
+  line-height: var(--sgds-line-height-20) !important;
+  margin: var(--sgds-margin-none) !important;
 }
 
 slot[name="title"]::slotted(a) {
