--- a/src/base/sgds-element.css
+++ b/src/base/sgds-element.css
@@ -5,7 +5,7 @@
   font-family: var(--sgds-font-family-brand);
   font-size: var(--sgds-font-size-2);
   font-weight: var(--sgds-font-weight-regular);
-  line-height: var(--sgds-line-height-body);
+  line-height: var(--sgds-line-height-24);
   margin: 0;
 
   *,
