--- a/src/styles/form-text-control.css
+++ b/src/styles/form-text-control.css
@@ -39,7 +39,7 @@
   flex-grow: 1;
   color: var(--sgds-form-color-default);
   font-size: var(--sgds-font-size-2);
-  line-height: var(--sgds-line-height-body);
+  line-height: var(--sgds-line-height-24);
 }
 
 @media (prefers-reduced-motion: reduce) {
