style(line height): replace new line height css variables

--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -128,7 +128,7 @@ slot[name="title"]::slotted(*) {
   align-items: center;
   gap: 1rem;
   margin: var(--sgds-margin-none, var(--sgds-margin-xs, --sgds-margin-2-xs));
-  line-height: var(--sgds-line-height-heading);
+  line-height: var(--sgds-line-height-40);
   font-size: var(--sgds-font-size-6, --sgds-font-size-4);
 }
 
