feat(fouc): new styles to mitigate fouc

--- a/cypress/apps/next-app/src/app/globals.css
+++ b/cypress/apps/next-app/src/app/globals.css
@@ -1,6 +1,3 @@
 @import url("@govtechsg/sgds-web-component/themes/day.css");
 @import url("@govtechsg/sgds-web-component/css/reboot.css");
-
-sgds-thumbnail-card:not(:defined) {
-    visibility: hidden;
-}
+@import url("@govtechsg/sgds-web-component/css/fouc.css");
