--- a/src/base/button.css
+++ b/src/base/button.css
@@ -75,13 +75,13 @@
 
 :host([variant="primary"][tone="neutral"]) {
   --btn-bg: var(--sgds-surface-inverse);
-  --btn-hover-bg: linear-gradient(0deg, var(--sgds-bg-translucent-inverse, rgba(255, 255, 255, 0.20)) 0%, var(--sgds-bg-translucent-inverse, rgba(255, 255, 255, 0.20)) 100%), var(--sgds-btn-primary-neutral-default-bg, #2A2A2A);
+  --btn-hover-bg: linear-gradient(0deg, var(--sgds-bg-translucent-inverse) 0%, var(--sgds-bg-translucent-inverse) 100%), var(--sgds-surface-inverse);
   --btn-color: var(--sgds-color-inverse);
 }
 :host([variant="outline"][tone="neutral"]) {
   --btn-border-color: var(--sgds-border-color-emphasis); 
   --btn-bg: var(--sgds-bg-transparent);
-  --btn-hover-bg: linear-gradient(0deg, var(--sgds-bg-translucent-inverse, rgba(255, 255, 255, 0.20)) 0%, var(--sgds-bg-translucent-inverse, rgba(255, 255, 255, 0.20)) 100%), var(--sgds-btn-outlined-neutral-hover-bg, rgba(14, 14, 14, 0.05));
+  --btn-hover-bg: linear-gradient(0deg, var(--sgds-bg-translucent-inverse) 0%, var(--sgds-bg-translucent-inverse) 100%), var(--sgds-bg-translucent-subtle);
   --btn-color: var(--sgds-color-default);
 }
 :host([variant="ghost"][tone="neutral"]) {
